[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/ui/menus/pause_menu.gd" id="1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
process_mode = 2
visible = false
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
mouse_filter = 1

[node name="Layout" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
separation = 10
alignment = 0

[node name="Title" type="Label" parent="Panel/Layout"]
layout_mode = 2
text = "Пауза"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Panel/Layout"]
layout_mode = 2
separation = 6

[node name="ResumeBtn" type="Button" parent="Panel/Layout/Buttons"]
layout_mode = 2
text = "Продолжить"

[node name="SettingsLabel" type="Label" parent="Panel/Layout"]
layout_mode = 2
text = "Настройки"
horizontal_alignment = 1

[node name="SettingsBox" type="VBoxContainer" parent="Panel/Layout"]
layout_mode = 2
separation = 6

[node name="LimitBlizzard" type="CheckBox" parent="Panel/Layout/SettingsBox"]
layout_mode = 2
text = "Ограничить эмиттеры / LOD метели"

[node name="SleepFauna" type="CheckBox" parent="Panel/Layout/SettingsBox"]
layout_mode = 2
text = "Усыплять далёких кроликов / декор"

[node name="Vsync" type="CheckBox" parent="Panel/Layout/SettingsBox"]
layout_mode = 2
text = "V-Sync"

[node name="FpsLimitLabel" type="Label" parent="Panel/Layout/SettingsBox"]
layout_mode = 2
text = "Лимит FPS"

[node name="FpsLimit" type="OptionButton" parent="Panel/Layout/SettingsBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="CheckBox" parent="Panel/Layout/SettingsBox"]
layout_mode = 2
text = "Полноэкранный режим"

[node name="ResolutionLabel" type="Label" parent="Panel/Layout/SettingsBox"]
layout_mode = 2
text = "Разрешение"

[node name="Resolution" type="OptionButton" parent="Panel/Layout/SettingsBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionsLabel" type="Label" parent="Panel/Layout"]
layout_mode = 2
text = "Действия (пока заглушки)"
horizontal_alignment = 1

[node name="ActionButtons" type="HBoxContainer" parent="Panel/Layout"]
layout_mode = 2
separation = 8
alignment = 1

[node name="SaveBtn" type="Button" parent="Panel/Layout/ActionButtons"]
layout_mode = 2
text = "Сохранить"

[node name="LoadBtn" type="Button" parent="Panel/Layout/ActionButtons"]
layout_mode = 2
text = "Загрузить"

[node name="ExitBtn" type="Button" parent="Panel/Layout/ActionButtons"]
layout_mode = 2
text = "Выйти"
